--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/"
+    "start": "nodemon src/index.ts",
+    "build": "tsc -p ./"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
     "nodemon": "^3.0.2"
   }
 }
